option java_outer_classname = "LCDataSave";
option java_package = "com.navinfo.opentsp.platform.location.protocol.dataaccess.common";

message DataSave{
	required	int32	nodeNumber			=1;
	required	int32	nodeNumberTo		=2;
	required	int32	dataType			=3;
	required	bytes	dataValue			=4;
}